--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html{
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #55cac2;
+	background-color: #331919;
 }
 
 .worldMap{
@@ -11,11 +11,15 @@ body, html{
 	max-width:186vh; 
 	position: relative;	
 	margin: 0 auto;
+	-moz-user-select: none;             
+	-webkit-user-select: none; 
+	-ms-user-select: none;
 }
 
 .worldMap img{
 	width: 100%;
 	display: block;
+	border-radius:6px;
 }
 
 .worldMap svg{
@@ -32,17 +36,23 @@ button{
 	-webkit-border-radius: 6px;
 	text-shadow: 0px 1px 0px #86ae47;
 	border-radius: 6px;
-	border: 1px solid #000205;
+	border: 0px solid #000205;
 	cursor: pointer;
-	color: #b0b5c0;
 	font-family: arial;
 	font-size: 21px;
 	font-weight: bold;
+	background-color: #e8d1a4;
+	color: #ab3334;
+}
+
+button:hover {
+	background-color:#331919;
+	color:#e8d1a4;
 }
 
 .startBox{
-	width:30%;
-	height:30%;
+	width: 220px;
+	height:65px;
 	background-color: #c5c7c2;
 	position: absolute;
 	top: 50%;
@@ -51,40 +61,50 @@ button{
 }
 
 .startBox button{
-	width: 30vh;
-	height: 10vh;
+	font-size: 24px;
+	width:100%;
+	height:100%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	background-color: #ab3334;
+	color: #e8d1a4;
+}
+
+.startBox button:hover {
+	background-color:#331919;
+	color:#e8d1a4;
 }
 
 .infoBox{
 	position: absolute;
 	display: none;
-	width:164px;
-	height:200px;
+	width:200px;
+	height:240px;
 	top: 50%;
 	transform: translate(0%, -50%);
-	background-color:#546894;
+	background-color:#ab3334;
 	border-radius:6px;
-	border: 2px #025b5b solid;
+	border: 2px #331919 solid;
 	max-width: 30%;
 	max-height: 50%;
+	color: #331919;
+	font-family:arial;
+	font-weight: bold;
+	font-size: 17px;
 }
 
 .infoText{
-	font-family:arial;
-	font-weight: bold;
-	color: #b0b5c0;
-	background-color:#546894;
-	font-size: 17px;
-	text-align: center;
 	padding-left: 12%;
 	padding-right: 12%;
 	padding-bottom: 4%;
 	margin-top: 10%;
-	color: #000205;
+	text-align: center;
+}
+
+.country{
+	text-align: center;
 }
 
 .infoBox button{
@@ -96,39 +116,31 @@ button{
 	padding: 2% 2%;
 }
 
-@media only screen and (max-width: 450px){
-	.infoBox {
-		width: 82px;
-		height: 100px;
-	}
-	.infoText{
-		font-size: 10px;
-	}
-	button{
-		font-size: 11px;
-	}
-}
-
-.questionLine{
+.topBar{
 	position: relative;	
-	background-color: #b6c2b2;
-	max-width:178.2vh;
+	background-color: #dda185;
+	max-width:186vh;
 	height: 7vh;
 	margin: 0 auto;
 	font-size: 18px;
+	font-family:arial;
+	font-weight: bold;
+	color: #331919;
+	border-radius: 6px;
 }
 .question{
 	padding-left: 1%;
 }
 
-.points{
+.pointsMsg{
 	float:right;
-	padding-right: 4%;
+	padding-right: 1%;
 }
 
-.next:hover {
-	background-color:#b0b5c0;
-	color:#0c2766;
+.pointsLeft{
+}
+
+.points{
 }
 
 .dialogMeasure:hover{
@@ -155,4 +167,65 @@ button{
 	display: none;
 	left: 0%;
 	top: 0%;
+}
+
+.finishBox{
+	display: none;
+	width:164px;
+	height:200px;
+	background-color: #ab3334;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	font-family:arial;
+	font-weight: bold;
+	font-size: 20px;
+	color: #e8d1a4;
+	padding-top: 1%;
+	word-wrap: break-word;
+	border-radius:6px;
+	border: 2px #331919 solid;
+	
+}
+
+.totalCitiesTxt{
+	padding-bottom: 2%;
+}
+
+.totalCities{
+
+}
+
+.finishBox button{
+	width: 60%;
+	height: 20%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	margin-top: 18%;
+}
+
+@media only screen and (max-width: 450px), screen and (max-height: 450px){
+	.infoBox {
+		width: 82px;
+		height: 100px;
+	}
+	.infoText{
+		font-size: 10px;
+	}
+	
+	.finishBox{
+		width: 82px;
+		height: 100px;
+		font-size: 8px;
+	}
+	.infoBox button{
+		font-size: 11px;
+	}
+	.finishBox button{
+		font-size: 11px;
+	}
 }
