--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body, html{
 	position: absolute;
 	border-radius: 6px;
 	box-shadow: 0px 0px 50px black;
+	z-index: 100;
 }
 
 .box button{
@@ -81,7 +82,7 @@ button:hover {
 }
 
 .startBox{
-	width: 420px;
+	width: 450px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -106,7 +107,7 @@ button:hover {
 
 .infoBox .country{
 	text-align: center;
-	margin-top: 15px;
+	margin-top: 25px;
 }
 
 .topBar{
